test/spec_vectors/simd_bit_shift/fail/module_2.wat
(module (func (result v128) (i8x16.shl (i32.const 0) (i32.const 0))))